# risc_v_simulator

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs  qol.rs  sim.rs
src/abstractions/: csr_processor.rs  memory.rs  mod.rs  non_determinism.rs  oracle.rs  tracer.rs
src/cycle/: mod.rs  state.rs
src/cycle/opcode_formats/: b_type.rs  i_type.rs  j_type.rs  mod.rs  r_type.rs  s_type.rs  u_type.rs
src/cycle/status_registers/: interrupt_cause.rs  mod.rs  sapt.rs  status.rs
src/delegations/: blake2_round_function.rs  blake2_round_function_state_in_registers.rs  blake2_round_function_with_final_xor.rs  blake2s.rs  mersenne_ext4_fma.rs  mod.rs  poseidon2_provide_witness_and_compress.rs
src/mmio/: mod.rs  quasi_uart.rs
src/mmu/: mod.rs
src/runner/: mod.rs
src/tests/: add.rs  addi.rs  beq.rs  mod.rs  mul.rs  mulh.rs  mulhu.rs  rem.rs  slt.rs  sltu.rs  sra.rs
src/utils/: mod.rs
