[package]
name = "risc_v_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ringbuffer = "*"
addr2line = "0.22"
object = "*"
memmap2 = "*"
inferno = "*"

[[bin]]
name = "runner"
path = "bin/runner.rs"
